--- a/css/foundation.css
+++ b/css/foundation.css
@@ -32,7 +32,7 @@
   .header-subnav {
     float: none;
     position: relative;
-    top: 38rem;
+    top: 36.7rem;
     text-align: center;
     margin-bottom: 0; }
     .header-subnav li {
@@ -65,7 +65,118 @@
   /**
      * Remove default margin.
      */
-  body {
-    margin: 0;
-    color: black;
-   }
+   body {
+   padding: 0;
+   margin: 0;
+   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+   font-weight: normal;
+   line-height: 1.5;
+   color: #0a0a0a;
+   background: #fefefe;
+   -webkit-font-smoothing: antialiased;
+   -moz-osx-font-smoothing: grayscale; }
+
+  #map_canvas img,
+  #map_canvas embed,
+  #map_canvas object,
+  .map_canvas img,
+  .map_canvas embed,
+  .map_canvas object,
+  .mqa-display img,
+  .mqa-display embed,
+  .mqa-display object {
+    max-width: none !important; }
+
+  .column, .columns {
+  width: 100%;
+  float: left;
+  padding-left: 0.625rem;
+  padding-right: 0.625rem; }
+  /*@media screen and (min-width: 40em) {
+    .column, .columns {
+      padding-left: 0.9375rem;
+      padding-right: 0.9375rem; } }
+  .column:last-child:not(:first-child), .columns:last-child:not(:first-child) {
+    float: right; }
+  .column.end:last-child:last-child, .end.columns:last-child:last-child {
+    float: left; }
+
+.column.row.row, .row.row.columns {
+  float: none; }
+  .row .column.row.row, .row .row.row.columns {
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: 0;
+    margin-right: 0; }*/
+  .row {
+  max-width: 75rem;
+  margin-left: auto;
+  margin-right: auto; }
+  .small-up-1 > .column, .small-up-1 > .columns {
+    width: 100%;
+    float: left; }
+  .small-up-1 > .column:nth-of-type(1n), .small-up-1 > .columns:nth-of-type(1n) {
+    clear: none; }
+  .small-up-1 > .column:nth-of-type(1n+1), .small-up-1 > .columns:nth-of-type(1n+1) {
+    clear: both; }
+  .small-up-1 > .column:last-child, .small-up-1 > .columns:last-child {
+    float: left; }
+
+  .medium-up-2 > .column, .medium-up-2 > .columns {
+    width: 50%;
+    float: left; }
+    .medium-up-2 > .column:nth-of-type(1n), .medium-up-2 > .columns:nth-of-type(1n) {
+      clear: none; }
+    .medium-up-2 > .column:nth-of-type(2n+1), .medium-up-2 > .columns:nth-of-type(2n+1) {
+      clear: both; }
+    .medium-up-2 > .column:last-child, .medium-up-2 > .columns:last-child {
+      float: left; }
+
+  .large-up-3 > .column, .large-up-3 > .columns {
+    width: 33.33333%;
+    float: left; }
+    .large-up-3 > .column:nth-of-type(1n), .large-up-3 > .columns:nth-of-type(1n) {
+      clear: none; }
+    .large-up-3 > .column:nth-of-type(3n+1), .large-up-3 > .columns:nth-of-type(3n+1) {
+      clear: both; }
+    .large-up-3 > .column:last-child, .large-up-3 > .columns:last-child {
+      float: left; }
+
+  .callout {
+    margin: 1 1 2rem 1;
+    padding: 3rem;
+    border: 1px solid rgba(10, 10, 10, 0.25);
+    border-radius: 0;
+    position: relative;
+    color: #0a0a0a;
+    background-color: white; }
+    .callout > :first-child {
+      margin-top: 0; }
+    .callout > :last-child {
+      margin-bottom: 0; }
+    .callout.primary {
+      background-color: #def0fc; }
+    .callout.secondary {
+      background-color: #ebebeb; }
+    .callout.success {
+      background-color: #e1faea; }
+    .callout.warning {
+      background-color: #fff3d9; }
+    .callout.alert {
+      background-color: #fce6e2; }
+    .callout.small {
+      padding-top: 1rem;
+      padding-right: 1rem;
+      padding-bottom: 1rem;
+      padding-left: 1rem; }
+    .callout.large {
+      padding-top: 3rem;
+      padding-right: 3rem;
+      padding-bottom: 3rem;
+      padding-left: 3rem; }
+
+  .callout-img {
+    height: 250px;
+    width: 365px;
+    align-content: center;
+  }
