had to redo the website screenshots

--- a/css/foundation.css
+++ b/css/foundation.css
@@ -72,7 +72,7 @@
    font-weight: normal;
    line-height: 1.5;
    color: #0a0a0a;
-   background: #fefefe;
+   background: #ffffff;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale; }
 
